--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
                 <a href="http://" class="last">Kontakt</a>
             
         </nav>
-        </div>
     <div class="main flex big">
     <div class="footer">
-        <div class="flex-item"></div>
+        <div class="flex-item side"></div>
     </div>
     
 </body>
