--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
                 <a href="http://" class="last">Kontakt</a>
             
         </nav>
-    <div class="main flex big">
+    <div class="main flex side"></div>
     <div class="footer">
-        <div class="flex-item side"></div>
     </div>
     
 </body>
