--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav">
         <nav class="flex-item flex-nav">
-            <div class="logo"> <img src="" alt="logo" height="70px"></div>
+            <div class="logo"> <img src="/Pictures/logo.png" alt="logo" height="70px"></div>
             <a href="http://">Avaleht</a>
                 <a href="http://">Menüü</a>
                 <a href="http://">Tooted</a>
